# automotive_feature_engineering

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
src/automotive_feature_engineering/: __init__.py  feature_encoding.py  feature_extraction.py  feature_interactions.py  feature_scaling.py  feature_selection.py  main_feature_engineering.py  outlier_detection.py  sna_handling.py
src/automotive_feature_engineering/reinforcement_learning/: alt_config.json  rl_environment_ss.py  rl_main.py  rl_randomforest_defaults.json
src/automotive_feature_engineering/utils/: __init__.py  utils.py
