[project]
name = "automotive_feature-engineering"
version = "0.1.0"
requires-python = ">=3.10"
description = "A Python package designed to automate the feature engineering process for large in-car communication datasets within the automotive industry."
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
maintainers = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["reinforcement learning", "feature engineering", "automotive", "regression"]
classifiers = [
  "Programming Language :: Python",
  "Natural Language :: English"
]
dependencies = [
    "absl-py==2.1.0",
    "aiosignal==1.3.1",
    "asammdf==7.4.5",
    "astunparse==1.6.3",
    "attrs==23.2.0",
    "binary==1.0.0",
    "cachetools==5.4.0",
    "canmatrix==1.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "config==0.5.1",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "distlib==0.3.8",
    "dm-tree==0.1.8",
    "eli5==0.13.0",
    "et-xmlfile==1.1.0",
    "Farama-Notifications==0.0.4",
    "filelock==3.15.4",
    "flatbuffers==24.3.25",
    "fonttools==4.53.0",
    "frozenlist==1.4.1",
    "fsspec==2024.6.1",
    "future==1.0.0",
    "gast==0.4.0",
    "google-auth==2.32.0",
    "google-auth-oauthlib==1.0.0",
    "google-pasta==0.2.0",
    "graphviz==0.20.3",
    "grpcio==1.49.1",
    "gymnasium==0.28.1",
    "h5py==3.11.0",
    "idna==3.7",
    "imageio==2.34.2",
    "isal==1.6.1",
    "jax-jumpy==1.0.0",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "jsonschema==4.22.0",
    "jsonschema-specifications==2023.12.1",
    "keras==2.13.1",
    "kiwisolver==1.4.5",
    "lazy_loader==0.4",
    "libclang==18.1.1",
    "llvmlite==0.43.0",
    "lxml==5.2.2",
    "lz4==4.3.3",
    "Markdown==3.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.9.0",
    "mdurl==0.1.2",
    "ml-dtypes==0.2.0",
    "msgpack==1.0.8",
    "networkx==3.3",
    "nltk==3.2.4",
    "numba==0.60.0",
    "numexpr==2.10.0",
    "numpy==1.24.3",
    "oauthlib==3.2.2",
    "openpyxl==3.1.5",
    "opt-einsum==3.3.0",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.3.0",
    "platformdirs==4.2.2",
    "preprocessing==0.1.12",
    "protobuf==4.25.3",
    "pyarrow==16.1.0",
    "pyasn1==0.6.0",
    "pyasn1_modules==0.4.0",
    "Pygments==2.18.0",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "PyWavelets==1.6.0",
    "PyYAML==6.0.1",
    "ray==2.3.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==13.7.1",
    "rpds-py==0.18.1",
    "rsa==4.9",
    "scikit-image==0.21.0",
    "scikit-learn==1.2.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sphinx-rtd-theme==0.2.4",
    "svgwrite==1.4.3",
    "tabulate==0.9.0",
    "tensorboard==2.13.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardX==2.6.2.2",
    "tensorflow==2.13.0",
    "tensorflow-estimator==2.13.0",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "tifffile==2024.7.2",
    "typer==0.12.3",
    "typing_extensions==4.5.0",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "Werkzeug==3.0.3",
    "wrapt==1.14.1"
]


[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
rl = "automotive_featureengineering:rl"
static = "automotive_featureengineering:static"
manual = "automotive_featureengineering:manual"

[tool.setuptools.package-data]
"automotive_feature_engineering" = ["reinforcement_learning/*.json"]